# domestobot

./: .gitignore  README.md  README.org  config_template.toml  config_tutorial.toml  dev_requirements.in  dev_requirements.txt  dodo.py  mise.toml  noxfile.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-tests.yml
domestobot/: __init__.py  __main__.py  _app.py  _config.py  _core.py  _steps.py  app.py  commands.py  config.py  context_objects.py  core.py  routines.py  steps.py
requirements/: dev_requirements.txt  linting_requirements.txt  packaging_requirements.txt  requirements.txt  test_requirements.txt  toolchain_requirements.in  toolchain_requirements.txt  typing_requirements.txt
tests/: asserts.py  conftest.py  test_app.py  test_builtin_steps.py  test_commands.py  test_config.py  test_context_objects.py  test_core.py  test_routines.py  test_steps.py
tutorial/: config_tutorial.toml  root.toml  sub_config.toml
