[metadata]
name = domestobot
version: 0.1.0
description = Your own trusty housekeeper
author = Ali Ghahraei Figueroa
author_email = aligf94@gmail.com


[options]
packages = find:
python_requires = >=3.9

install_requires =
    sh
    typer[all]

[options.entry_points]
console_scripts =
    domestobot = domestobot.commands:app


[mypy]
strict = True

[mypy-sh.*]
ignore_missing_imports = True
