[metadata]
name = domestobot
version: 0.1.0
description = Your own trusty housekeeper
author = Ali Ghahraei Figueroa
author_email = aligf94@gmail.com


[options]
packages = find:
python_requires = >=3.9

install_requires =
    sh
    typer[all]
    tomlkit
    typical
    xdg

[options.entry_points]
console_scripts =
    domestobot = domestobot.commands:main


[mypy]
files = domestobot, tests, *.py
strict = True

[mypy-doit.*]
ignore_missing_imports = True

[mypy-nox.*]
ignore_missing_imports = True

[mypy-noxfile]
disallow_untyped_decorators = False

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-sh.*]
ignore_missing_imports = True

[mypy-tomlkit.*]
no_implicit_reexport = False

[mypy-typic.*]
no_implicit_reexport = False
